02_app_serv.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: app
  name: app
  namespace: app
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
    name: http
  selector:
    app.kubernetes.io/name: app
  #type: LoadBalancer
  type: ClusterIP
