03_app_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  namespace: app
  labels:
    app.kubernetes.io/name: app
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
        location ~* "^/admin" {
            deny all;
        }
spec:
  rules:
    - host: app.k8s.domain.com
      http:
        paths:
        - path: /one
          backend:
            serviceName: app
            servicePort: 5000
        - path: /two
          backend:
            serviceName: app
            servicePort: 5000
        - path: /three
          backend:
            serviceName: app
            servicePort: 5000
        - path: /admin
          backend:
            serviceName: app2
            servicePort: 5000
